--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,7 +19,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "morgan": "~1.9.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^30.0.2",
